--- a/scss/config/util/_text.scss
+++ b/scss/config/util/_text.scss
@@ -34,6 +34,10 @@ strong {
   font-weight: 600;
 }
 
+small {
+  font-size: .875rem;
+}
+
 // ---------------------------------------------------------------- //
 
 *.text-center {
